cabal-version:      3.4
name:               gloss-utils
version:            0.1.0.0
synopsis:           Utility functions for gloss.
description:        Utility functions for gloss to help my students when writing projects.
license:            BSD-2-Clause
license-file:       LICENSE
author:             Joseph Haugh
maintainer:         jhaugh500@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Graphics.Gloss.Utils.Scanners,
                      Graphics.Gloss.Utils.PictureState
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      gloss <2,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite gloss-utils-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        gloss-utils
